objects/APTS_Stage_Quotation_LineItem__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Adjusted_Price__c</fullName>
        <label>Adjusted Price</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_Amount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Price_Method__c</fullName>
        <label>Base Price Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Cost__c</fullName>
        <label>Cost</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Created_By__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Created_On__c</fullName>
        <label>Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Product_Code__c</fullName>
        <label>Customer Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Delivery_Days__c</fullName>
        <label>Delivery Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Type__c</fullName>
        <label>Discount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Extended_Cost__c</fullName>
        <label>Extended Cost</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Extended_Price__c</fullName>
        <label>Extended Price</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level__c</fullName>
        <label>Hierarchy Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Product_Code__c</fullName>
        <label>Hierarchy Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Standard_Discount__c</fullName>
        <label>Standard Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_List_Price__c</fullName>
        <label>List Price</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Min_Delivery_Qty__c</fullName>
        <label>Quantity of Package</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Min_Order_Qty__c</fullName>
        <label>Min Order Qty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_Override__c</fullName>
        <label>Net Price Override</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Stage Quotation LineItem</relationshipLabel>
        <relationshipName>Stage_Quotation_LineItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Price_1_Gross_Price__c</fullName>
        <label>Price 1 (Gross Price)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Unit__c</fullName>
        <label>Price Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Unit_of_Measure__c</fullName>
        <label>Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Identifier__c</fullName>
        <label>Quote Ref No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Line_Item__c</fullName>
        <label>Quote Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RowStatus__c</fullName>
        <label>Row Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SPA_Identifier__c</fullName>
        <description>To identify which Quotation, the Quotation Line Item is associated to.</description>
        <label>SPA Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Scale_Type_Discount__c</fullName>
        <label>Scale Type Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Standard_Discount__c</fullName>
        <label>Standard Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Unit_of_Price__c</fullName>
        <defaultValue>TEXT(0)</defaultValue>
        <label>UOP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stage Quotation LineItem</label>
    <nameField>
        <label>Stage Quotation LineItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Quotation LineItem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>